--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "map-coordinates-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   },
   "dependencies": {
     "react": "^19.0.0",
